# FactorLab

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  assets.py  experiments.py  exports.py  factors.py  health.py  prices.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: 20260127_000001_initial_schema.py
backend/app/db/models/: __init__.py  asset.py  data_version.py  experiment.py  experiment_result.py  price.py
backend/app/services/backtest/: returns.py
backend/app/services/factors/: base.py  lowvol.py  registry.py  transforms.py  trend.py  xsmom.py
backend/app/services/ingestion/: etf_ingest.py
backend/app/tasks/: celery_app.py  jobs.py
backend/app/tests/: test_assets_seed.py  test_factors.py  test_factors_registry.py  test_health.py  test_ingestion_stooq.py  test_prices_status.py  test_returns.py  test_transforms.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/builder/: page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/components/: Drawdown.tsx  EquityCurve.tsx  ExperimentTable.tsx  MetricCards.tsx  Nav.tsx  RollingSharpe.tsx  RunButton.tsx  StatusPill.tsx  StrategyForm.tsx  Turnover.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
research/: methodology.md
(+2 files in other folders)
